[workspace]
members = [
    # libcraft
    "libcraft/core",
    "libcraft/blocks",
    "libcraft/generators",
    "libcraft/items",
    "libcraft/macros",
    "libcraft/particles",
    "libcraft/text",
    "libcraft/inventory",

    # Quill
    "quill/sys-macros",
    "quill/sys",
    "quill/common",
    "quill/api",
    "quill/api/plugin-macro",
    "quill/plugin-format",
    "quill/cargo-quill",

    # Quill example plugins
    "quill/example-plugins/titles",
    "quill/example-plugins/block-access",
    "quill/example-plugins/block-place",
    "quill/example-plugins/particle-example",
    "quill/example-plugins/plugin-message",
    "quill/example-plugins/query-entities",
    "quill/example-plugins/simple",
    "quill/example-plugins/observe-creativemode-flight-event",

    # Feather (common and server)
    "feather/utils",
    "feather/blocks",
    "feather/blocks/generator",
    "feather/base",
    "feather/ecs",
    "feather/datapacks",
    "feather/worldgen",
    "feather/common",
    "feather/protocol",
    "feather/plugin-host/macros",
    "feather/plugin-host",
    "feather/server",

    # Other
    "proxy",
]

# No longer need to use release for "development":
[profile.dev.package."*"]
opt-level = 2