[package]
name = "feather-blocks"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-codegen = { path = "../codegen" }
lazy_static = "1.4.0"
byteorder = "1.3.2"
failure = "0.1.5"
num-traits = "0.2.8"
num-derive = "0.2.5"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "block_id_mappings"
harness = false