[package]
name = "feather-blocks"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-codegen = { path = "../codegen" }
lazy_static = "1.4"
byteorder = "1.3"
failure = "0.1"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "block_id_mappings"
harness = false
