[package]
name = "feather-blocks"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
bit-set = "0.5"
once_cell = { version = "1.3", features = ["parking_lot"] }
strum = "0.18"
strum_macros = "0.18"
anyhow = "1.0"

[build-dependencies]
feather-blocks-generator = { path = "generator" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "block_id_mappings"
harness = false
