[package]
name = "feather_codegen"
version = "0.3.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.1", features = ["full", "extra-traits", "derive"] }
quote = "1.0.2"
proc-macro2 = "1.0.0"
lazy_static = "1.3.0"
heck = "0.3.1"
strum = "0.15.0"
strum_macros = "0.15.0"