[package]
name = "feather-codegen"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits", "derive"] }
quote = "1.0.2"
proc-macro2 = "1.0.3"
lazy_static = "1.4.0"
heck = "0.3.1"
strum = "0.15.0"
strum_macros = "0.15.0"