[package]
name = "feather-core"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
feather-codegen = { path = "../codegen" }
feather-blocks = { path = "../blocks" }
feather-items = { path = "../items" }
lazy_static = "1.4"
derive-new = "0.5"
uuid = "0.7"
cfb8 = "0.3"
aes = "0.3"
flate2 = "1.0"
bytes = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"
hashbrown = { version = "0.6", features = ["serde", "rayon"] }
hematite-nbt = "0.4"
byteorder = "1.3"
nalgebra-glm = "0.4"
derive_more = "0.15"
smallvec = "0.6"
hash32 = "0.1"
hash32-derive = "0.1"
strum = "0.16"
strum_macros = "0.16"
tokio = "=0.2.0-alpha.6"
failure = "0.1"
bitvec = "0.15"
multimap = "0.6"
parking_lot = "0.9.0"
rayon = "1.2.0"
