[package]
name = "feather-core"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-anvil = { path = "./anvil" }
feather-biomes = { path = "./biomes" }
feather-blocks = { path = "./blocks" }
feather-chunk = { path = "./chunk" }
feather-chunk-map = { path = "./chunk_map" }
feather-entity-metadata = { path = "./entity_metadata" }
feather-inventory = { path = "./inventory" }
feather-item-block = { path = "./item_block" }
feather-items = { path = "./items" }
feather-network = { path = "./network" }
feather-text = { path = "./text" }
feather-util = { path = "./util" }
