[package]
name = "data-generators"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.68"
serde = { version = "1", features = ["derive"] }
convert_case = "0.4.0"
regex = "1.5.4"
quote = "1.0.10"
proc-macro2 = "1.0.32"
rayon = "1.5.1"
reqwest = { version = "0.11.6", default-features = false, features = [ "blocking", "rustls-tls" ] }
once_cell = "1.8.0"
indexmap = { version = "1.7.0", features = [ "serde" ] }
bincode = "1.3.3"
fs_extra = "1.2.0"
log = "0.4.14"
