[package]
name = "data-generators"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
convert_case = "0.5"
fs_extra = "1"
indexmap = { version = "1", features = [ "serde" ] }
libcraft-core = { path = "../libcraft/core" }
log = "0.4"
once_cell = "1"
proc-macro2 = "1"
quote = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = [ "tls" ] }
