[package]
name = "feather-generator"
version = "0.4.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Code generators for Feather"

[dependencies]
byteorder = "1.3.2"
clap = { version = "2.33.0", features = ["yaml"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
simple_logger = "1.3.0"
log = "0.4.8"
failure = "0.1.5"
derive_deref = "1.1.0"
indexmap = { version = "1.1.0", features = ["serde-1"] }
quote = "1.0.2"
syn = "1.0.5"
heck = "0.3.1"
proc-macro2 = "1.0.2"