[package]
name = "feather-generator"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Code generators for Feather"

[dependencies]
byteorder = "1.3"
clap = { version = "2.33", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3"
log = "0.4"
failure = "0.1"
derive_deref = "1.1"
indexmap = { version = "1.2", features = ["serde-1"] }
quote = "1.0.2"
syn = { version = "1.0", features = ["full"] }
heck = "0.3"
proc-macro2 = "1.0"
