[package]
name = "feather_item_block"
version = "0.1.0"
authors = ["caelunshun <caelum12321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_blocks = { path = "../blocks" }
feather_items = { path = "../items" }