[package]
name = "feather-item-block"
version = "0.4.1"
authors = ["caelunshun <caelum12321@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather-blocks = { path = "../blocks" }
feather-items = { path = "../items" }