[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive"] }
colored = "2.0.0"
feather-protocol = { path = "../feather/protocol" }
fern = "0.6.0"
log = "0.4.14"
pretty-hex = "0.2.1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
