[package]
name = "quill"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
derive_more = "0.99"
libcraft = { path = "../libcraft" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
smartstring = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }
vane = { path = "../vane" }
