[package]
name = "feather-server"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
name = "feather_server"
path = "src/lib.rs"

[[bin]]
name = "feather-server"
path = "src/main.rs"

[dependencies]
# Feather crates
feather-blocks = { path = "../blocks" }
feather-core = { path = "../core" }
feather-item-block = { path = "../item_block" }
feather-codegen = { path = "../codegen" }

# Core ECS + systems
legion = { git = "https://github.com/TomGillen/legion", rev = "cfb31727d9f4c8f069c559c0cdf05f56547fd9d4" }
tonks = { git = "https://github.com/feather-rs/tonks", rev = "726498c53d4f4ea4814e9935f2df4412b2c01b35", features = ["system-registry"] }

# Concurrency/threading
crossbeam = "0.7"
rayon = "1.2"
parking_lot = "0.9"
lock_api = "0.3"
thread_local = "1.0"

# Netorking/IO
tokio = "=0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
bytes = "0.4"
mojang-api = "0.4"

# Crypto
rsa = "0.1"
rsa-der = "0.2"
# Match RSA git master
num-bigint = { version = "0.4", features = ["rand", "i128", "u64_digit", "prime", "zeroize"], package = "num-bigint-dig" }

# Hash functions
ahash = "0.2"
fnv = "1.0"
base64 = "0.10"

# Math and physics
nalgebra-glm = "0.4"
nalgebra = "0.18"
ncollide3d = "0.20"

# Other data structures
hashbrown = { version = "0.6", features = ["rayon"] }
bitvec = "0.15"
bitflags = "1.2"
heapless = "0.5"
uuid = { version = "0.7", features = ["v4"] }
multimap = "0.7"
smallvec = "0.6"
dashmap = "2.1"

# Logging
log = "0.4"
simple_logger = "1.3"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
hematite-nbt = "0.4"

# RNGs
rand = "0.7"
rand_xorshift = "0.2"
rand-legacy = { path = "../util/rand-legacy" }

# Other
failure = "0.1"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
derive_deref = "1.1"
bumpalo = "2.6"
strum = "0.16"
simdnoise = "3.1"
simdeez = "0.6"
humantime-serde = "0.1"
ctrlc = "3.1"
inventory = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "worldgen"
harness = false

[features]
nightly = ["hashbrown/nightly", "parking_lot/nightly"]
