[package]
name = "feather-server"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
name = "feather_server"
path = "src/lib.rs"

[[bin]]
name = "feather-server"
path = "src/main.rs"

[dependencies]
# Feather crates
feather-blocks = { path = "../blocks" }
feather-core = { path = "../core" }
feather-item-block = { path = "../item_block" }
feather-codegen = { path = "../codegen" }

# Core ECS + systems
# fecs = { git = "https://github.com/caelunshun/fecs", rev = "e865bce3a9ac7f8fd3a9a7b5e3c139a746500137" }
fecs = { path = "../../../dev/fecs" }

# Concurrency/threading
crossbeam = "0.7"
rayon = "1.3"
parking_lot = { version = "0.10", features = ["deadlock_detection"] }
lock_api = "0.3"
thread_local = "1.0"

# Netorking/IO
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
bytes = "0.5"
mojang-api = "0.6"

# Crypto
rsa = "0.2"
rsa-der = "0.2"
# Match RSA git master
num-bigint = { version = "0.6", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }

# Hash functions
ahash = "0.3"
base64 = "0.12"

# Math and physics
nalgebra-glm = "0.6"
nalgebra = "0.20"
ncollide3d = "0.22"

# Other data structures
hashbrown = { version = "0.7", features = ["rayon"] }
bitvec = "0.17"
bitflags = "1.2"
heapless = "0.5"
uuid = { version = "0.8", features = ["v4"] }
multimap = "0.8"
smallvec = "1.2"
indexmap = "1.3"

# Logging
log = "0.4"
simple_logger = "1.6"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
hematite-nbt = "0.4"

# RNGs
rand = "0.7"
rand_xorshift = "0.2"

# Other
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
bumpalo = { version = "3.2", features = ["collections"] }
strum = "0.18"
simdnoise = "3.1"
simdeez = "1.0"
humantime-serde = "1.0"
ctrlc = "3.1"
inventory = "0.1"
derivative = "2.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "worldgen"
harness = false

[features]
nightly = ["hashbrown/nightly", "parking_lot/nightly"]
