[package]
name = "feather-server"
version = "0.5.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
name = "feather_server"
path = "src/lib.rs"

[[bin]]
name = "feather-server"
path = "src/main.rs"

[dependencies]
# Feather crates
feather-blocks = { path = "../blocks" }
feather-core = { path = "../core" }
feather-item-block = { path = "../item_block" }
feather-codegen = { path = "../codegen" }

# Core ECS + systems
fecs = { git = "https://github.com/feather-rs/fecs", rev = "20d54b0ff8b11fbb76f55fec012e4feb66e20c42" }
# fecs = { path = "../../../dev/fecs" }

# Concurrency/threading
crossbeam = "0.7"
rayon = "1.3"
parking_lot = { version = "0.10", features = ["deadlock_detection"] }
lock_api = "0.3"
thread_local = "1.0"

# Netorking/IO
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
futures = "0.3"
bytes = "0.5"
mojang-api = "0.6"

# Crypto
rsa = "0.2"
rsa-der = "0.2"
# Match RSA git master
num-bigint = { version = "0.6", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }

# Hash functions
ahash = "0.3"
base64 = "0.12"

# Math and physics
nalgebra-glm = "0.6"
nalgebra = "0.20"
ncollide3d = "0.22"

# Other data structures
hashbrown = { version = "0.7", features = ["rayon"] }
bitvec = "0.17"
bitflags = "1.2"
heapless = "0.5"
uuid = { version = "0.8", features = ["v4"] }
multimap = "0.8"
smallvec = "1.2"
arrayvec = "0.5"
indexmap = "1.3"
dashmap = "3.7"

# Logging
log = "0.4"
simple_logger = "1.6"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
hematite-nbt = "0.4"

# RNGs
rand = "0.7"
rand_distr = "0.2.2"
rand_xorshift = "0.2"

# Other
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
strum = "0.18"
simdnoise = "3.1"
simdeez = "1.0"
humantime-serde = "1.0"
ctrlc = "3.1"
inventory = "0.1"
derivative = "2.0"
itertools = "0.9"
structopt = "0.3"

# Allocators
bumpalo = { version = "3.2", features = ["collections"] }
jemallocator = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Dependencies for dev tools GUI
imgui = { version = "0.3", optional = true }
winit = { version = "0.21", optional = true } # use old version for imgui-winit-support
imgui-wgpu = { version = "0.5", optional = true }
imgui-winit-support = { version = "0.3", optional = true }
wgpu = { version = "0.4", optional = true }
minifb = { version = "0.15", optional = true }

[features]
# Enables the dev tools GUI used for
# testing world generation.
# Pass --dev-tools on the CLI
# to run Feather in this mode.
dev-tools = ["imgui", "winit", "imgui-wgpu", "imgui-winit-support", "wgpu", "minifb"]
nightly = ["hashbrown/nightly", "parking_lot/nightly"]

[dev-dependencies]
criterion = "0.3"
approx = "0.3"

[[bench]]
name = "worldgen"
harness = false
