[package]
name = "vane"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
arrayvec = "0.7"
flume = "0.10"
itertools = "0.10"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = [ "derive" ] }
thiserror = "1"
thread_local = "1"
