[package]
name = "feather-blocks-generator"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-data = { path = "../../data" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "1.3", features = ["serde-1"] }
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
heck = "0.3"
once_cell = "1.3"
maplit = "1.0"
bincode = "1.2"
