[package]
name = "feather-anvil"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-items = { path = "../items" }
feather-blocks = { path = "../blocks" }
feather-biomes = { path = "../biomes" }
feather-inventory = { path = "../inventory" }
feather-chunk = { path = "../chunk" }
feather-util = { path = "../util" }

thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
uuid = "0.8"
hematite-nbt = { git = "https://github.com/feather-rs/hematite_nbt" }
byteorder = "1.3"
bitvec = "0.17"
anyhow = "1.0"
arrayvec = { version = "0.5", features = ["serde"] }
