[package]
name = "feather-biomes"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18"
strum_macros = "0.18"
num-traits = "0.2"
num-derive = "0.3"
