[package]
name = "feather-blocks"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-definitions = { path = "../../definitions" }
feather-util = { path = "../util" }

bit-set = "0.5"
once_cell = { version = "1.3", features = ["parking_lot"] }
anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"

[build-dependencies]
feather-blocks-generator = { path = "generator" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "block_id_mappings"
harness = false
