[package]
name = "feather-chunk-map"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-chunk = { path = "../chunk" }
feather-util = { path = "../util" }
feather-blocks = { path = "../blocks" }

hashbrown = { version ="0.7", features = ["rayon"] }
parking_lot = "0.10"
