[package]
name = "feather-crafting"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-items = { path = "../items" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.4"
arrayvec = { version = "0.5", features = ["serde"] }
anyhow = "1.0"
ahash = "0.3"
