[package]
name = "feather-inventory"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather-items = { path = "../items" }
smallvec = "1.3"
once_cell = "1.3"
