[package]
name = "feather-inventory"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-items = { path = "../items" }

fecs = { git = "https://github.com/feather-rs/fecs", rev = "fed8bcb516941b12cb980e354e77b699be075a89" }
legion = { git = "https://github.com/TomGillen/legion", rev = "bd441f4811e7a9e877a0f479a674bbdbf4e4cda3" }
thiserror = "1.0"
parking_lot = "0.10"
maplit = "1.0"
smallvec = "1.4"
once_cell = "1.3"
