[package]
name = "feather-loot"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-loot-model = { path = "model" }
feather-items = { path = "../items" }

serde_json = "1.0"
once_cell = "1.4"
rand = "0.7"
smallvec = "1.4"
thiserror = "1.0"
ahash = "0.3"
inlinable_string = "0.1"
itertools = "0.9"

[build-dependencies]
feather-data = { path = "../../data" }

feather-loot-model = { path = "model" }
serde_json = "1.0"
walkdir = "2.3"
anyhow = "1.0"
