[package]
name = "feather-network"
version = "0.6.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-items = { path = "../items" }
feather-inventory = { path = "../inventory" }
feather-entity-metadata = { path = "../entity_metadata" }
feather-codegen = { path = "../../codegen" }
feather-util = { path = "../util" }
feather-blocks = { path = "../blocks" }
feather-chunk = { path = "../chunk" }

uuid = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
hematite-nbt = "0.4"
log = "0.4"
strum = "0.18"
strum_macros = "0.18"
num-traits = "0.2"
num-derive = "0.3"
ahash = "0.3"
once_cell = "1.3"
parking_lot = "0.10"

# Codec
bytes = "0.5"
tokio-util = { version = "0.3", features = ["codec"] }
byteorder = "1.3"
flate2 = "1.0"
aes = "0.3"
cfb8 = "0.3"
