[package]
name = "feather-protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
thiserror = "1"

byteorder = "1"

aes = { version = "0.5", optional = true }
cfb8 = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[features]
default = ["codec"]
codec = ["aes", "cfb8", "flate2"]
