[package]
name = "feather-protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
feather-entity-metadata = { path = "../entity_metadata" }
feather-items = { path = "../items" }
feather-blocks = { path = "../blocks" }
feather-chunk = { path = "../chunk" }
feather-anvil = { path = "../anvil" }
feather-util = { path = "../util" }

serde = "1"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt", rev = "41124ff" }
uuid = "0.8"

anyhow = "1"
thiserror = "1"

byteorder = "1"
num-traits = "0.2"

aes = { version = "0.5", optional = true }
cfb8 = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[features]
default = ["codec"]
codec = ["aes", "cfb8", "flate2"]
