[package]
name = "feather-text"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"
hematite-nbt = "0.4"
uuid = { version = "0.8", features = ["serde"] }
nom = "5.1"
nom_locate = "2.0"
thiserror = "1.0"