[package]
name = "feather-util"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vek = "0.10"
nalgebra-glm = "0.7"
num-traits = "0.2"
num-derive = "0.3"
