[package]
name = "feather-base"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
blocks = { path = "../blocks", package = "feather-blocks" }
generated = { path = "../generated", package = "feather-generated" }
ecs = { path = "../ecs", package = "feather-ecs" }

resources = { version = "1", default-features = false }
vek = "0.12"
ahash = "0.4"
smallvec = "1"
bitflags = "1"
parking_lot = "0.11"
uuid = { version = "0.8", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"

# Text markdown parsing
nom = "5"
nom_locate = "2"

serde = { version = "1", features = ["derive"] }
serde_with = "1"
serde_json = "1"
hematite-nbt = "0.5"
anyhow = "1"
thiserror = "1"
