[package]
name = "feather-base"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
libcraft-core = { git = "https://github.com/feather-rs/libcraft" }
blocks = { path = "../blocks", package = "feather-blocks" }
generated = { path = "../generated", package = "feather-generated" }

vek = "0.14"
ahash = "0.4"
smallvec = "1"
arrayvec = { version = "0.5", features = ["serde"] }
bitflags = "1"
parking_lot = "0.11"
uuid = { version = "0.8", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.3"
bitvec = "0.21"

# Text markdown parsing
nom = "5"
nom_locate = "2"

serde = { version = "1", features = ["derive"] }
serde_with = "1"
serde_json = "1"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }
byteorder = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
serde_test = "1"
rand = "0.8"
rand_pcg = "0.3"
