[package]
name = "feather-base"
version = "0.1.0"
authors = [ "caelunshun <caelunshun@gmail.com>" ]
edition = "2018"

[dependencies]
ahash = "0.4"
anyhow = "1"
arrayvec = { version = "0.5", features = [ "serde" ] }
bitflags = "1"
bitvec = "0.21"
blocks = { path = "../blocks", package = "feather-blocks" }
byteorder = "1"
generated = { path = "../generated", package = "feather-generated" }
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }
libcraft-blocks = { git = "https://github.com/feather-rs/libcraft", rev = "0b49cd0" }
# libcraft-core = { git = "https://github.com/feather-rs/libcraft", rev = "0b49cd0" }
libcraft-core = { git = "https://github.com/amberkowalski/libcraft.git", branch = "amber-block-interact" }
libcraft-items = { git = "https://github.com/feather-rs/libcraft", rev = "0b49cd0" }

libcraft-particles = { git = "https://github.com/feather-rs/libcraft", rev = "0b49cd0" }
nom = "5"
nom_locate = "2"
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.11"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "1"
smallvec = "1"
thiserror = "1"
uuid = { version = "0.8", features = [ "serde" ] }

vek = "0.14"

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3"
serde_test = "1"
